fixed bottom white bar overflow

--- a/app/globals.css
+++ b/app/globals.css
@@ -4,10 +4,10 @@
   --color-primary: #4d6bfe;
 }
 
-html, body { /* <-- Added 'body' and these properties */
+html, body {
   margin: 0;
   padding: 0;
-  overflow-x: hidden;
+  overflow: hidden;
 }
 
 html {
